objects/Case_Process_Team__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Comments__c</fullName>
        <label>Additional Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Process Teams</relationshipLabel>
        <relationshipName>Case_Process_Teams</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Involved__c</fullName>
        <label>Involved</label>
        <picklist>
            <picklistValues>
                <fullName>Yes (Not Owner)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Process_Team__c</fullName>
        <label>Process Team</label>
        <referenceTo>Process_Team__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Case_Process_Teams</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Ready_to_Close__c</fullName>
        <label>Ready to Close</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Case Process Team</label>
    <nameField>
        <displayFormat>CP-{00000000}</displayFormat>
        <label>Case Process Team Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Process Teams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>